更新域名配置： 1. 添加CORS配置支持跨域 2. 优化API调用使用相对路径 3. 添加域名环境变量配置

--- a/CONTI-CN/.env
+++ b/CONTI-CN/.env
@@ -1,3 +1,6 @@
+DOMAIN=http://3.22.241.231
+PORT=3001
+NODE_ENV=production
 EMAIL_USER=ContiTechOrg@gmail.com
 EMAIL_PASS=gbrkmamctxmlhloq
 JWT_SECRET=conti_2024_secure_jwt_key_8a7b6c5d4e3f2g1h   
