--- a/CONTI-CN/.env
+++ b/CONTI-CN/.env
@@ -3,4 +3,5 @@ PORT=3001
 NODE_ENV=production
 EMAIL_USER=ContiTechOrg@gmail.com
 EMAIL_PASS=gbrkmamctxmlhloq
-JWT_SECRET=conti_2024_secure_jwt_key_8a7b6c5d4e3f2g1h   
+JWT_SECRET=conti_2024_secure_jwt_key_8a7b6c5d4e3f2g1h
+ADMIN_PASSWORD=ContiTechOrg$%GFEH&*31HSc88JCEBSKkEcesf   
