--- a/CONTI-CN/.env
+++ b/CONTI-CN/.env
@@ -1,7 +1,7 @@
-DOMAIN=http://3.22.241.231
-PORT=3001
+DOMAIN=3.22.241.231
+PORT=3000
 NODE_ENV=production
 EMAIL_USER=ContiTechOrg@gmail.com
 EMAIL_PASS=gbrkmamctxmlhloq
 JWT_SECRET=conti_2024_secure_jwt_key_8a7b6c5d4e3f2g1h
-ADMIN_PASSWORD=ContiTechOrg$%GFEH&*31HSc88JCEBSKkEcesf   
+ADMIN_PASSWORD=ContiTechOrg$%GFEH&*31HSc88JCEBSKkEcesf
